tdf#91364 - fix data-pilot and auto-filter popup lifecycle.

Change-Id: I6bc94025da3d6536b38cb43eef262d1d5f4c4c4c